新增子控件点击事件

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#d1860f</color>
 
     <color name="transparent">#00000000</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="bg_header">#4DB6AC</color>
     <color name="bg_footer">#007968</color>
