--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
 
+    <color name="bg_divider">#CECECE</color>
     <color name="bg_header">#4DB6AC</color>
     <color name="bg_footer">#007968</color>
     <color name="bg_selection">#BDBDBD</color>
