--- a/app/src/main/res/layout/item_first.xml
+++ b/app/src/main/res/layout/item_first.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:gravity="center"
     android:padding="@dimen/dimen_16"
     android:orientation="horizontal">
 
@@ -10,7 +11,7 @@
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/dimen_8"
+        android:layout_marginEnd="@dimen/dimen_16"
         android:textSize="@dimen/text_size_14"/>
 
     <Button
