--- a/app/src/main/res/layout/item_state.xml
+++ b/app/src/main/res/layout/item_state.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:padding="@dimen/dimen_16"
+    android:layout_height="match_parent"
     android:gravity="center"
+    android:padding="@dimen/dimen_16"
     android:orientation="horizontal">
+
+    <ProgressBar
+        android:id="@+id/pb_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/dimen_16"
-        android:textSize="@dimen/text_size_14"/>
-
-    <CheckBox
-        android:id="@+id/cb_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_marginStart="@dimen/dimen_8"
+        android:textSize="@dimen/text_size_18"/>
 </LinearLayout>
