--- a/app/src/main/res/layout/item_state.xml
+++ b/app/src/main/res/layout/item_state.xml
@@ -8,8 +8,8 @@
 
     <ProgressBar
         android:id="@+id/pb_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="@dimen/dimen_24"
+        android:layout_height="@dimen/dimen_24" />
 
     <TextView
         android:id="@+id/tv_text"
