--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="dimen_4">4dp</dimen>
     <dimen name="dimen_8">8dp</dimen>
     <dimen name="dimen_16">16dp</dimen>
+    <dimen name="dimen_24">24dp</dimen>
 
     <dimen name="text_size_10">10sp</dimen>
     <dimen name="text_size_14">14sp</dimen>
