新增自定义状态

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -20,4 +20,9 @@
         android:orderInCategory="100"
         android:title="@string/no_network"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_default"
+        android:orderInCategory="100"
+        android:title="@string/state_default"
+        app:showAsAction="never" />
 </menu>
