更新点击回调接口；新增部分数据管理方法；更新部分API；

--- a/app/src/main/res/layout/item_second.xml
+++ b/app/src/main/res/layout/item_second.xml
@@ -5,6 +5,7 @@
     android:background="@color/white"
     android:padding="@dimen/dimen_16"
     android:gravity="center"
+    android:layout_margin="@dimen/dimen_2"
     android:orientation="horizontal">
 
     <TextView
